--- a/week12/week12_assignment_2.ipynb
+++ b/week12/week12_assignment_2.ipynb
@@ -10,7 +10,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "XKbPVA1BUVao"
+        "id": "jjRXIXo5bSCP"
       },
       "source": [
         "# Week 12 Assignment\n",
@@ -30,7 +30,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "eNAJFzEzUVas"
+        "id": "CXhr82kPbSCQ"
       },
       "source": [
         "## STEP 1: Load and Filter data\n",
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 54,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -54,8 +54,8 @@
           "schema_version": 1,
           "solution": true
         },
-        "id": "FCgpVp8LUVas",
-        "outputId": "283dea48-d647-4aab-f189-9c0a8f5f16f2",
+        "id": "bSr68bj-bSCQ",
+        "outputId": "74590e90-2604-496a-b34a-77c0d6b705a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -73,7 +73,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-8-1340dc8ae539>:4: DtypeWarning: Columns (2,8,35,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-54-685bfa15a947>:4: DtypeWarning: Columns (2,8,35,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  condemnations = pd.read_csv('https://hds5210-data.s3.amazonaws.com/condemn.txt')\n"
           ]
         }
@@ -84,16 +84,12 @@
         "# Load the data\n",
         "condemnations = pd.read_csv('https://hds5210-data.s3.amazonaws.com/condemn.txt')\n",
         "\n",
-        "# Display the shape of the original dataframe\n",
         "print(\"Original shape:\", condemnations.shape)\n",
         "\n",
-        "# Convert InspectDate to datetime format\n",
         "condemnations['InspectDate'] = pd.to_datetime(condemnations['InspectDate'])\n",
         "\n",
-        "# Filter data between 1986 and 2014 (inclusive)\n",
         "condemnations = condemnations[(condemnations['InspectDate'] >= '1986-01-01') & (condemnations['InspectDate'] <= '2014-12-31')]\n",
         "\n",
-        "# Display the shape of the filtered dataframe\n",
         "print(\"Filtered shape:\", condemnations.shape)"
       ]
     },
@@ -101,7 +97,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ZmlkN7CgUVav"
+        "id": "PhhlUOk7bSCR"
       },
       "outputs": [],
       "source": []
@@ -110,14 +106,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "44Ed-yyCUVaw"
+        "id": "wLi7BaurbSCR"
       },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 55,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -127,7 +123,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "kLQf6PJcUVax"
+        "id": "Jh3KaQKNbSCR"
       },
       "outputs": [],
       "source": [
@@ -146,7 +142,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "9MykvAFAUVax"
+        "id": "m8m7tW3-bSCR"
       },
       "source": [
         "## STEP 2: Pivot and Summarize\n",
@@ -159,10 +155,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 56,
       "metadata": {
-        "id": "zjeL2yDMUVay",
-        "outputId": "b5cd7881-08ac-4497-dfb3-e93ad36c4493",
+        "id": "HFZ6t3YPbSCR",
+        "outputId": "2d442bd0-23a5-4cbd-a01c-78caa5f4c7f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -210,9 +206,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "# Assuming you've already filtered the data and have the 'condemnations' dataframe\n",
         "\n",
-        "# Pivot and summarize the data\n",
         "by_year = pd.pivot_table(condemnations,\n",
         "                         values='AcctNum',  # Assuming 'AcctNum' is a column you want to count\n",
         "                         index=condemnations['InspectDate'].dt.year,  # Extract year from InspectDate\n",
@@ -220,13 +214,12 @@
         "                         aggfunc=np.ma.count,  # Use np.ma.count as the aggregate function\n",
         "                         fill_value=0)  # Fill missing values with 0\n",
         "\n",
-        "# Display the resulting pivot table\n",
-        "print(by_year)"
+        "print(by_year)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 57,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -236,7 +229,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "9ktQ_qK8UVaz"
+        "id": "g3I7xS3_bSCR"
       },
       "outputs": [],
       "source": [
@@ -255,7 +248,7 @@
           "schema_version": 1,
           "solution": false
         },
-        "id": "-H-13oFcUVaz"
+        "id": "1Hluj5BJbSCR"
       },
       "source": [
         "## STEP 3: Plot and see what you see\n",
@@ -265,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 58,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -275,11 +268,11 @@
           "schema_version": 1,
           "solution": true
         },
-        "id": "-1vwrsItUVa0",
-        "outputId": "4f9c2320-8f16-4ef1-ac23-cb2ebd0135ea",
+        "id": "rJDRE8h9bSCR",
+        "outputId": "ba2c1d90-23d8-40d4-870a-193b6305af25",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 466
+          "height": 467
         }
       },
       "outputs": [
@@ -291,7 +284,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 58
         },
         {
           "output_type": "display_data",
@@ -312,17 +305,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "p2SBnSuDUVa1"
+        "id": "XsVpaX0HbSCS"
       },
       "source": [
         "---"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In the displayed data, the peak in 2010 for category 'B' suggests a significant increase in activity, showcasing a consistent upward trend over the entire time frame. Conversely, column 'R' hits its lowest point around 2012, indicating a period of relative inactivity, notably between 1994 and 2012. Columns 'W' and 'L' exhibit irregular patterns, lacking a clear trend. The visualization from 1985 to 2015 provides insights into temporal dynamics, making it a valuable tool for understanding condemnation patterns and prompting further investigation into influencing factors.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MCqEAm2IjwMb"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "d0JGnQeiUVa1"
+        "id": "baotcUHYbSCS"
       },
       "outputs": [],
       "source": []
@@ -331,7 +338,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8fp_sKe5UVa2"
+        "id": "l6TvjcpZbSCS"
       },
       "outputs": [],
       "source": []
@@ -339,7 +346,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "o1E_2Bk4UVa2"
+        "id": "9qobwVaObSCS"
       },
       "source": [
         "# PART 2 - Video Conference Usage\n",
@@ -362,82 +369,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 59,
       "metadata": {
-        "id": "yd1E2yp6UVa2"
+        "id": "eRF9-pD0bSCS"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "# Load the data\n",
-        "# Load the data\n",
         "meetings = pd.read_csv('https://hds5210-data.s3.amazonaws.com/meetings.csv')\n",
         "\n",
-        "# Extract the day part of the startTime column\n",
         "meetings['startDate'] = meetings['startTime'].str[0:10]\n",
         "\n",
-        "# Create a column for the label 'BEFORE' or 'DURING'\n",
-        "meetings.loc[(meetings['startDate'] >= '2023-02-17') & (meetings['startDate'] <= '2023-02-28'), 'label'] = 'BEFORE'\n",
-        "meetings.loc[(meetings['startDate'] >= '2023-03-16') & (meetings['startDate'] <= '2023-03-27'), 'label'] = 'DURING'\n",
+        "meetings.loc[meetings['startDate'].between('2020-02-17', '2020-02-28'), 'WeekLabel'] = 'BEFORE'\n",
         "\n",
-        "# Pivot table to summarize the information\n",
+        "meetings.loc[meetings['startDate'].between('2020-03-16', '2020-03-27'), 'WeekLabel'] = 'DURING'\n",
+        "\n",
         "summary = pd.pivot_table(meetings,\n",
-        "                         values='meeting_uuid',  # Assuming 'meeting_uuid' is a column you want to count\n",
+        "                         values='startTime',\n",
         "                         index='userName',\n",
-        "                         columns='label',\n",
+        "                         columns='WeekLabel',\n",
         "                         aggfunc='count',\n",
-        "                         fill_value=0)"
+        "                         fill_value=0)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 60,
       "metadata": {
-        "id": "6sZ6KKwoUVa3",
-        "outputId": "fb1d6734-f966-48bf-85d9-92084889d2ab",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 512
-        }
+        "id": "4gejsuMCbSCS"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3802\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'DURING'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-b2be3bbf9156>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Calculate the percent change\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msummary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pctChange'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DURING'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0msummary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'BEFORE'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0msummary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'BEFORE'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Round the percent change to two decimal places\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msummary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pctChange'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pctChange'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3807\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3808\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3809\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3804\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3805\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'DURING'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Calculate the percent change\n",
-        "summary['pctChange'] = (summary['DURING'] - summary['BEFORE']) / summary['BEFORE'] * 100\n",
-        "\n",
-        "# Round the percent change to two decimal places\n",
-        "summary['pctChange'] = round(summary['pctChange'], 2)\n",
-        "\n",
-        "# Display the summary dataframe\n",
-        "print(summary)"
+        "summary['pctChange'] = (summary['DURING'] - summary['BEFORE']) / summary['BEFORE']\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jDNNlZFiUVa3"
+        "id": "dtyyve8NbSCS"
       },
       "source": [
         "---"
@@ -445,9 +415,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
-        "id": "_-EyH5JXUVa3"
+        "id": "Sh61J13cbSCS"
       },
       "outputs": [],
       "source": [
@@ -456,9 +426,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
-        "id": "NJX78XlrUVa3"
+        "id": "4dvxiARJbSCS"
       },
       "outputs": [],
       "source": [
@@ -469,7 +439,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0f3OnTU2UVa4"
+        "id": "XV5hyeQAbSCT"
       },
       "outputs": [],
       "source": []
@@ -477,7 +447,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UJhDxTQRUVa4"
+        "id": "5qoditVnbSCT"
       },
       "source": [
         "\n",
