--- a/Copy_of_week15_assignment_2.ipynb
+++ b/Copy_of_week15_assignment_2.ipynb
@@ -46,13 +46,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
+        "id": "zVHQ7SQ8D4ei",
+        "outputId": "0bf2f28f-1b20-43eb-8f5e-d8c217deed1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "zVHQ7SQ8D4ei",
-        "outputId": "ba4f46ad-cd26-4762-b24f-7df41ab567fb"
+        }
       },
       "outputs": [
         {
@@ -103,27 +103,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
+        "id": "P9h6DBCsD4ej",
+        "outputId": "574de1c9-735d-4a5a-8f55-5ae96abb8bf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "P9h6DBCsD4ej",
-        "outputId": "4b4c9ccb-63a9-49d2-e835-a790e0b8e93f"
+        }
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<snowflake.connector.connection.SnowflakeConnection object at 0x78cbe465dab0>\n"
+            "<snowflake.connector.connection.SnowflakeConnection object at 0x7d99dee06e90>\n"
           ]
         }
       ],
       "source": [
         "import snowflake.connector\n",
         "\n",
-        "#Snowflake connection\n",
+        "\n",
         "con = snowflake.connector.connect(\n",
         "    user='HARISCHANDRA359',\n",
         "    password='Harishc768',\n",
@@ -136,7 +136,7 @@
         "    }\n",
         ")\n",
         "\n",
-        "print(con)"
+        "print(con)\n"
       ]
     },
     {
@@ -144,22 +144,20 @@
       "source": [
         "con.cursor().execute('use database ORES_DATA_1')\n",
         "con.cursor().execute('use schema public')\n",
-        "\n",
-        "#Query to select data from table\n",
         "df = con.cursor().execute('''\n",
         "  select * from air_quality;''').fetch_pandas_all()\n",
         "\n",
         "df"
       ],
       "metadata": {
+        "id": "pP6TckAlGsUK",
+        "outputId": "a84cd8e7-493d-4a46-c335-287d1dc56013",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 704
-        },
-        "id": "pP6TckAlGsUK",
-        "outputId": "684766bb-daa8-4174-8731-ed136daca5d1"
+        }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +219,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-69535754-c145-406e-8deb-a488c02062c9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c760d26e-8b02-4cec-b8fe-a247d4d09241\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -439,7 +437,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-69535754-c145-406e-8deb-a488c02062c9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c760d26e-8b02-4cec-b8fe-a247d4d09241')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -491,12 +489,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-69535754-c145-406e-8deb-a488c02062c9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c760d26e-8b02-4cec-b8fe-a247d4d09241 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-69535754-c145-406e-8deb-a488c02062c9');\n",
+              "        const element = document.querySelector('#df-c760d26e-8b02-4cec-b8fe-a247d4d09241');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -516,8 +514,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4f221511-d461-4856-950d-fdf9f1576ce9\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4f221511-d461-4856-950d-fdf9f1576ce9')\"\n",
+              "<div id=\"df-46fea8c0-8a68-4d4c-a863-1fd70e0aa7c1\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-46fea8c0-8a68-4d4c-a863-1fd70e0aa7c1')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -636,7 +634,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4f221511-d461-4856-950d-fdf9f1576ce9 button');\n",
+              "        document.querySelector('#df-46fea8c0-8a68-4d4c-a863-1fd70e0aa7c1 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -647,7 +645,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 11
         }
       ]
     },
@@ -664,13 +662,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
+        "id": "TasZcjs2D4ej",
+        "outputId": "8099175a-8959-4186-8d23-95ef388fa0c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "TasZcjs2D4ej",
-        "outputId": "5f73ea9e-177f-4cb9-f1f3-ebc5e8758934"
+        }
       },
       "outputs": [
         {
@@ -693,7 +691,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 12
         }
       ],
       "source": [
@@ -705,18 +703,18 @@
     {
       "cell_type": "code",
       "source": [
-        "#most frequent pullutant\n",
+        "# Most common pollutant\n",
         "most_frequent_pollutant = df['POLLUTANT'].mode().values[0]\n",
         "print(\"Most Pollutant in all cities:\", most_frequent_pollutant)"
       ],
       "metadata": {
+        "id": "Gz6M5l5hRRgk",
+        "outputId": "9deee698-fb5a-43c6-f3b8-07eb92034e59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "Gz6M5l5hRRgk",
-        "outputId": "086f90ea-fc50-47fb-a620-34582766cce8"
+        }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,19 +728,27 @@
     {
       "cell_type": "code",
       "source": [
-        "#most frequent pullutant for every city\n",
+        "# Most common pollutant in every city\n",
         "most_frequent_pollutant_by_city = df.groupby('CITY')['POLLUTANT'].apply(lambda x: x.mode().values[0])\n",
+        "print(\"Most commom pollutant in every city\")\n",
         "most_frequent_pollutant_by_city"
       ],
       "metadata": {
+        "id": "jQ7K-Od1TcGA",
+        "outputId": "902b18c9-41a3-455d-ad49-21ec25dd32c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "jQ7K-Od1TcGA",
-        "outputId": "767d2305-b3a5-4319-f20a-6815f0bfdba7"
+        }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Most commom pollutant in every city\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -763,18 +769,52 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Find the index of the row with the maximum value in the 'VALUE' column\n",
+        "max_value_index = df['VALUE'].idxmax()\n",
+        "\n",
+        "# Data with the maximum value\n",
+        "data_of_max_value = df.loc[max_value_index]\n",
+        "\n",
+        "print(\"Most pollutant location\\n\",data_of_max_value)"
+      ],
       "metadata": {
-        "id": "NO427wL6bqcI"
+        "id": "l4acJpcocFU2",
+        "outputId": "c8907607-34c4-4206-934a-1c99fd6265ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Most pollutant location\n",
+            " LOCATION                                                     NCORE - Bishop\n",
+            "CITY                                                                 Bishop\n",
+            "COUNTRY                                                                  US\n",
+            "POLLUTANT                                                              pm10\n",
+            "VALUE                                                                2069.0\n",
+            "UNIT                                                                  µg/m³\n",
+            "SOURCE_NAME                                                          AirNow\n",
+            "LATITUDE                                                                1.0\n",
+            "LONGITUDE                                                         37.360701\n",
+            "AVERAGED_OVER_IN_HOURS                                          -118.330835\n",
+            "LOCATION_GEOM             {\\n  \"coordinates\": [\\n    3.736070100000000e+...\n",
+            "DATA                                                             2022-05-20\n",
+            "TIME                                                               11:00:00\n",
+            "Name: 114202, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -789,14 +829,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
+        "id": "2KwTYU_VD4ej",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 704
         },
-        "id": "2KwTYU_VD4ej",
-        "outputId": "7b24f85a-330a-4b29-edac-55a87dcf0c3e"
+        "outputId": "2be4d43d-9428-4553-9351-bc516a7f3f34"
       },
       "outputs": [
         {
@@ -846,7 +886,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-eed52843-3748-4d18-8967-19c351453509\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6f746468-448f-45f7-b791-d91ccd1f833e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1064,7 +1104,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eed52843-3748-4d18-8967-19c351453509')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6f746468-448f-45f7-b791-d91ccd1f833e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1116,12 +1156,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-eed52843-3748-4d18-8967-19c351453509 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6f746468-448f-45f7-b791-d91ccd1f833e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-eed52843-3748-4d18-8967-19c351453509');\n",
+              "        const element = document.querySelector('#df-6f746468-448f-45f7-b791-d91ccd1f833e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1141,8 +1181,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-dee0aa0a-cdfb-4936-ae8b-6a6cad9fa966\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dee0aa0a-cdfb-4936-ae8b-6a6cad9fa966')\"\n",
+              "<div id=\"df-45263fd3-e72c-4016-8aa2-af429693bfa1\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-45263fd3-e72c-4016-8aa2-af429693bfa1')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1261,7 +1301,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-dee0aa0a-cdfb-4936-ae8b-6a6cad9fa966 button');\n",
+              "        document.querySelector('#df-45263fd3-e72c-4016-8aa2-af429693bfa1 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1272,7 +1312,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 8
         }
       ],
       "source": [
@@ -1291,7 +1331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "CsnakfyMD4ej"
       },
