--- a/Copy_of_week15_assignment_2.ipynb
+++ b/Copy_of_week15_assignment_2.ipynb
@@ -46,22 +46,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "zVHQ7SQ8D4ei",
-        "outputId": "0bf2f28f-1b20-43eb-8f5e-d8c217deed1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "647e8f7b-1984-43c3-96d9-9c68e4910efe"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: snowflake-connector-python[pandas] in /usr/local/lib/python3.10/dist-packages (3.6.0)\n",
-            "Requirement already satisfied: asn1crypto<2.0.0,>0.24.0 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (1.5.1)\n",
-            "Requirement already satisfied: cffi<2.0.0,>=1.9 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (1.16.0)\n",
+            "Collecting snowflake-connector-python[pandas]\n",
+            "  Downloading snowflake_connector_python-3.6.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.5 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m12.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting asn1crypto<2.0.0,>0.24.0 (from snowflake-connector-python[pandas])\n",
+            "  Downloading asn1crypto-1.5.1-py2.py3-none-any.whl (105 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m15.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: cffi<2.0.0,>=1.9 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (1.16.0)\n",
             "Requirement already satisfied: cryptography<42.0.0,>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (41.0.7)\n",
             "Requirement already satisfied: pyOpenSSL<24.0.0,>=16.2.0 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (23.3.0)\n",
             "Requirement already satisfied: pyjwt<3.0.0 in /usr/lib/python3/dist-packages (from snowflake-connector-python[pandas]) (2.3.0)\n",
@@ -74,15 +78,23 @@
             "Requirement already satisfied: typing-extensions<5,>=4.3 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (4.5.0)\n",
             "Requirement already satisfied: filelock<4,>=3.5 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (3.13.1)\n",
             "Requirement already satisfied: sortedcontainers>=2.4.0 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (2.4.0)\n",
-            "Requirement already satisfied: platformdirs<4.0.0,>=2.6.0 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (3.11.0)\n",
-            "Requirement already satisfied: tomlkit in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (0.12.3)\n",
+            "Collecting platformdirs<4.0.0,>=2.6.0 (from snowflake-connector-python[pandas])\n",
+            "  Downloading platformdirs-3.11.0-py3-none-any.whl (17 kB)\n",
+            "Collecting tomlkit (from snowflake-connector-python[pandas])\n",
+            "  Downloading tomlkit-0.12.3-py3-none-any.whl (37 kB)\n",
             "Requirement already satisfied: pandas<2.2.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (1.5.3)\n",
             "Requirement already satisfied: pyarrow in /usr/local/lib/python3.10/dist-packages (from snowflake-connector-python[pandas]) (10.0.1)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi<2.0.0,>=1.9->snowflake-connector-python[pandas]) (2.21)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas<2.2.0,>=1.0.0->snowflake-connector-python[pandas]) (2.8.2)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas<2.2.0,>=1.0.0->snowflake-connector-python[pandas]) (1.23.5)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0->snowflake-connector-python[pandas]) (2.0.7)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas<2.2.0,>=1.0.0->snowflake-connector-python[pandas]) (1.16.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas<2.2.0,>=1.0.0->snowflake-connector-python[pandas]) (1.16.0)\n",
+            "Installing collected packages: asn1crypto, tomlkit, platformdirs, snowflake-connector-python\n",
+            "  Attempting uninstall: platformdirs\n",
+            "    Found existing installation: platformdirs 4.1.0\n",
+            "    Uninstalling platformdirs-4.1.0:\n",
+            "      Successfully uninstalled platformdirs-4.1.0\n",
+            "Successfully installed asn1crypto-1.5.1 platformdirs-3.11.0 snowflake-connector-python-3.6.0 tomlkit-0.12.3\n"
           ]
         }
       ],
@@ -103,20 +115,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "P9h6DBCsD4ej",
-        "outputId": "574de1c9-735d-4a5a-8f55-5ae96abb8bf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "25b2957d-871b-4238-f5f4-7e3e7a091c44"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<snowflake.connector.connection.SnowflakeConnection object at 0x7d99dee06e90>\n"
+            "<snowflake.connector.connection.SnowflakeConnection object at 0x7d9a100d5720>\n"
           ]
         }
       ],
@@ -151,13 +163,13 @@
       ],
       "metadata": {
         "id": "pP6TckAlGsUK",
-        "outputId": "a84cd8e7-493d-4a46-c335-287d1dc56013",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 704
-        }
+        },
+        "outputId": "afc766d1-bf51-4a0f-e65b-457212c987ef"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +231,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c760d26e-8b02-4cec-b8fe-a247d4d09241\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ea376e1a-6dce-453c-844c-9ace6ba3069c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -437,7 +449,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c760d26e-8b02-4cec-b8fe-a247d4d09241')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea376e1a-6dce-453c-844c-9ace6ba3069c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -489,12 +501,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c760d26e-8b02-4cec-b8fe-a247d4d09241 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ea376e1a-6dce-453c-844c-9ace6ba3069c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c760d26e-8b02-4cec-b8fe-a247d4d09241');\n",
+              "        const element = document.querySelector('#df-ea376e1a-6dce-453c-844c-9ace6ba3069c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -514,8 +526,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-46fea8c0-8a68-4d4c-a863-1fd70e0aa7c1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-46fea8c0-8a68-4d4c-a863-1fd70e0aa7c1')\"\n",
+              "<div id=\"df-7631ee44-a924-47dc-945f-a5a2908e4eb2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7631ee44-a924-47dc-945f-a5a2908e4eb2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -634,7 +646,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-46fea8c0-8a68-4d4c-a863-1fd70e0aa7c1 button');\n",
+              "        document.querySelector('#df-7631ee44-a924-47dc-945f-a5a2908e4eb2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -645,7 +657,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -662,13 +674,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "TasZcjs2D4ej",
-        "outputId": "8099175a-8959-4186-8d23-95ef388fa0c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a4a0bd8-47ae-415d-b619-487b896dc3a4"
       },
       "outputs": [
         {
@@ -691,7 +703,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 4
         }
       ],
       "source": [
@@ -709,12 +721,12 @@
       ],
       "metadata": {
         "id": "Gz6M5l5hRRgk",
-        "outputId": "9deee698-fb5a-43c6-f3b8-07eb92034e59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f982f39e-894c-4973-8bfa-e8835f4c742f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,12 +747,12 @@
       ],
       "metadata": {
         "id": "jQ7K-Od1TcGA",
-        "outputId": "902b18c9-41a3-455d-ad49-21ec25dd32c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "858875d9-efdf-49ee-9671-1d2103c722d7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +781,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 6
         }
       ]
     },
@@ -786,12 +798,12 @@
       ],
       "metadata": {
         "id": "l4acJpcocFU2",
-        "outputId": "c8907607-34c4-4206-934a-1c99fd6265ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "26b190df-0fd5-485c-b565-5980e65cbbcd"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,14 +841,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "2KwTYU_VD4ej",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 704
         },
-        "outputId": "2be4d43d-9428-4553-9351-bc516a7f3f34"
+        "outputId": "c3765d64-d26a-4a9a-de30-00729c9dbc7d"
       },
       "outputs": [
         {
@@ -1331,7 +1343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "CsnakfyMD4ej"
       },
