--- a/final/final.ipynb
+++ b/final/final.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnmRj1psarqkkhmRQD7D9U",
+      "authorship_tag": "ABX9TyNnyyjZnqP19NFulEKAGxqg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,24 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Harischandra359/hds5210-2023/blob/main/final/final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data retrieval & manipulation\n",
+        "\n",
+        "\n",
+        "Data sources\n",
+        "\n",
+        "The following data were retrieved:\n",
+        "\n",
+        "a.CDC's Division of Population Health provides cross-cutting set of 124 indicators that were developed by consensus and that allows states and territories and large metropolitan areas to uniformly define, collect, and report chronic disease data that are important to public health practice and available for states, territories and large metropolitan areas. Data for chronic indicators were retrieved from(csv format) https://catalog.data.gov/dataset/u-s-chronic-disease-indicators-cdi\n",
+        "\n",
+        "b.This file is a combination of individual excel sheets published by the Federal Reserve Bank of St. Louis. It contains annual population counts for all 50 states & D.C. from 1900-2017. Data for population were retrieved from(xml format) https://www.kaggle.com/datasets/hassenmorad/historical-state-populations-19002017"
+      ],
+      "metadata": {
+        "id": "9EP-dsD1L8Qg"
+      }
     },
     {
       "cell_type": "code",
