--- a/final/final.ipynb
+++ b/final/final.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnyyjZnqP19NFulEKAGxqg",
+      "authorship_tag": "ABX9TyNO947Pur0q47yaYagfJQDV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Data retrieval & manipulation\n",
+        "#Data retrieval & manipulation\n",
         "\n",
         "\n",
-        "Data sources\n",
+        "#Data sources\n",
         "\n",
         "The following data were retrieved:\n",
         "\n",
@@ -437,7 +437,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The line graph depicts the sum of DataValue for asthma over the years from 2010 to 2017, broken down by U.S. states and territories, each represented by a different color. The legend on the right side indicates the color coding for each location, identified by its abbreviation.\n",
+        "\n",
+        "There are noticeable spikes in the DataValue for certain years and locations. For instance, there's a significant peak around 2012 for one location in particular, which could indicate an outbreak, increased reporting, or changes in data collection methods. There is another notable peak around 2016 for a different location.\n",
+        "\n",
+        "The variability in the data suggests significant differences in the DataValue for asthma across different locations and over time. However, without more context or a clearer view, it's challenging to determine the exact reasons for these variations or to draw more specific conclusions from this visualization."
+      ],
       "metadata": {
         "id": "Klwtt0_SH-hV"
       }
